Fix #127480: Tag geometry recalc when adding new frames in GPv3

`rna_Frames_frame_new` did not `DEG_id_tag_update` when it's
done so this lead users to believe that the new frame is
duplicated. The frame is correctly created, just display needs
refreshing.